@@ -1,6 +1,9 @@
 2012-12-24 Graeme Gott <graeme@gottcode.org>
 	* Add support for compiling with Qt 5.0.0.
 
+2012-11-26 Graeme Gott <graeme@gottcode.org>
+	* Add start value to novel.
+
 2010-12-03 Graeme Gott <graeme@gottcode.org>
 	* Refactor data storage.
 	* Refactor goal handling.
